changes categories to galaxy_tags

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,7 +4,7 @@ galaxy_info:
   author: Daniel Schroeder <deemes79@gmai.com>
   description: Kill all open ssh connections to force ansible to re-connect at next task
   min_ansible_version: 2.0.0.1
-  categories:
+  galaxy_tags:
     - system
     - ssh
   license: MIT
